[package]
name = "systemd-zbus"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://gitlab.com/flukejones/systemd-zbus"
homepage = "https://gitlab.com/flukejones/systemd-zbus"
documentation = "https://docs.rs/systemd-zbus"
description = "A dbus client (using zbus) for systemd"
keywords = ["systemd", "systemd", "zbus"]
categories = ["os::unix-apis"]

[dependencies]
serde = "^1.0"
zbus = "^3.6"

[dev-dependencies]
futures-lite = "1.12.0"